apps/media/plex/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
      nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
      nginx.ingress.kubernetes.io/proxy-body-size: '0'
spec:
  rules:
    - host: plex.mobrockers.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: plex
                port:
                  name: http
            pathType: Prefix
  tls:
    - hosts:
        - plex.mobrockers.com
